Shop/shop-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: shopquanao
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: thienvanvu/shop-app:v1
        ports:
        - containerPort: 80
          name: app-port
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: app-port
