Shop/shop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop-ingress
  namespace: shopquanao
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - thienvuvan.shop
  #   secretName: bookstore-tls-secret
  rules:
  - host: thienvuvan.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 80
